# storage/api-docs/api-docs.json
@@ -52,10 +52,70 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Login"
+                                    "properties": {
+                                        "email": {
+                                            "type": "string"
+                                        },
+                                        "accessToken": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "example": {
+                                    "email": "cool@email.com",
+                                    "accessToken": "tokenNr1",
+                                    "tokenType": "Bearer"
                                 }
                             }
                         }
+                    },
+                    "404": {
+                        "description": "User Not Found"
+                    },
+                    "401": {
+                        "description": "User Credential Invalid"
+                    }
+                }
+            }
+        },
+        "/api/v1/auth/logout": {
+            "post": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Operates about user",
+                "operationId": "4eee631b5540cc3b74d925dbe348f1fc",
+                "parameters": [
+                    {
+                        "parameter": "user_accessToken",
+                        "name": "Bearer",
+                        "in": "header",
+                        "description": "accessToken to log out",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Logged out",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                },
+                                "example": {
+                                    "message": "loged out"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Unauthorized"
                     }
                 }
             }
@@ -142,6 +202,15 @@
                     "password": "12345678",
                     "password_confirmation": "12345678"
                 }
+            }
+        },
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "name": "bearerAuth",
+                "in": "header",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
             }
         }
     },
